--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
 <% if flash[:notice] %>
   <%= flash[:alert] %>
 <% end %>
-<%= link_to 'Sign out', session_path, class: 'pure-menu-link', method: :delete %>
+<%= link_to 'Sign out', nyauth.session_path, class: 'pure-menu-link', method: :delete %>
 </body>
 </html>
