Refactor; kick out User related instruction

--- a/app/views/nyauth/confirmations/edit.html.slim
+++ b/app/views/nyauth/confirmations/edit.html.slim
@@ -1,5 +1,5 @@
-- if @user.errors.present?
+- if @client.errors.present?
   h2 errors
   ul.errors
-    - @user.errors.full_messages.each do |e|
+    - @client.errors.full_messages.each do |e|
       li #{e}
