--- a/app/views/nyauth/confirmation_requests/new.html.slim
+++ b/app/views/nyauth/confirmation_requests/new.html.slim
@@ -1,4 +1,4 @@
-= form_for(User.new, url: confirmation_requests_path, mehotd: :post, html: { class: 'pure-form' }) do |f|
+= form_for(client_class.new, url: confirmation_requests_path, mehotd: :post, html: { class: 'pure-form' }) do |f|
   fieldset
     legend= t 'nav.confirmation_requests.new'
   = f.text_field(:email, placeholder: :email)
