--- a/app/views/nyauth/new_passwords/edit.html.slim
+++ b/app/views/nyauth/new_passwords/edit.html.slim
@@ -1,10 +1,10 @@
-= form_for(@user, url: new_password_path(params[:new_password_key]), html: { class: 'pure-form pure-form-stacked' }) do |f|
+= form_for(@client, url: new_password_path(params[:new_password_key]), html: { class: 'pure-form pure-form-stacked' }) do |f|
   fieldset
     legend
-    - if @user.errors.present?
+    - if @client.errors.present?
       h2 errors
       ul.errors
-        - @user.errors.full_messages.each do |e|
+        - @client.errors.full_messages.each do |e|
           li #{e}
     = f.password_field :password, placeholder: :password
     = f.password_field :password_confirmation, placeholder: :confirmation
