--- a/app/views/nyauth/registrations/new.html.slim
+++ b/app/views/nyauth/registrations/new.html.slim
@@ -1,4 +1,4 @@
-= form_for @client, url: registration_path, html: { class: 'pure-form pure-form-stacked' } do |f|
+= form_for @client, url: request.path.sub(/new/, ''), html: { class: 'pure-form pure-form-stacked' } do |f|
   fieldset
     legend= t 'nav.registrations.new'
     - if @client.errors.present?
