--- a/app/views/nyauth/passwords/edit.html.slim
+++ b/app/views/nyauth/passwords/edit.html.slim
@@ -1,4 +1,4 @@
-= form_for(@client, url: password_path, html: { class: 'pure-form pure-form-stacked' }) do |f|
+= form_for(@client, url: password_path_for(client_name), html: { class: 'pure-form pure-form-stacked' }) do |f|
   fieldset
     legend
     - if @client.errors.present?
