--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <% if flash[:notice] %>
   <%= flash[:notice] %>
 <% end %>
-<% if flash[:notice] %>
+<% if flash[:alert] %>
   <%= flash[:alert] %>
 <% end %>
 <%= link_to "URL helper on application", posts_path %>
