--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
   <%= flash[:alert] %>
 <% end %>
 <%= link_to "URL helper on application", posts_path %>
-<%= link_to 'Sign out', nyauth.session_path, class: 'pure-menu-link', method: :delete %>
+<% if signed_in?(as: :user) %>
+  <%= link_to 'Sign out', session_path_for(:user), class: 'pure-menu-link', method: :delete %>
+<% end %>
+<% if signed_in?(as: :admin) %>
+  <%= link_to 'Sign out', session_path_for(:admin), class: 'pure-menu-link', method: :delete %>
+<% end %>
 </body>
 </html>
