--- a/app/views/nyauth/passwords/edit.html.erb
+++ b/app/views/nyauth/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @client, url: password_path_for(client_name) do |f| %>
+<%= form_for @client, url: password_path_for(nyauth_client_name) do |f| %>
   <%= f.object.errors.full_messages %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation %>
