--- a/app/views/nyauth/reset_password_requests/new.html.erb
+++ b/app/views/nyauth/reset_password_requests/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for nyauth_client_class.new, url: reset_password_requests_path_for(nyauth_client_name) do |f| %>
+<%= form_for @reset_password_request_service, url: reset_password_requests_path_for(nyauth_client_name) do |f| %>
   <%= f.text_field :email %>
   <%= f.submit 'reset password' %>
 <% end %>
