--- a/app/views/nyauth/confirmation_requests/new.html.erb
+++ b/app/views/nyauth/confirmation_requests/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @confirmation_request_service, url: confirmation_requests_path_for(nyauth_client_name) do |f| %>
+<%= form_for @service, url: confirmation_requests_path_for(nyauth_client_name) do |f| %>
   <%= f.email_field :email %>
   <%= f.submit 'request confirmation' %>
 <% end %>
