--- a/app/views/nyauth/confirmations/edit.html.erb
+++ b/app/views/nyauth/confirmations/edit.html.erb
@@ -1,1 +1,3 @@
-<%= @client.errors.full_messages.join ',' %>
+<div class="nyauth-error-messages">
+  <%= @client.errors.full_messages.join ',' %>
+</div>
