--- a/app/views/nyauth/passwords/edit.html.erb
+++ b/app/views/nyauth/passwords/edit.html.erb
@@ -9,5 +9,5 @@
   <div>
     <%= f.password_field :password_confirmation, placeholder: 'password confirmation' %>
   </div>
-  <%= f.submit 'Update' %>
+  <%= f.submit t('nav.nyauth.common.update') %>
 <% end %>
