--- a/app/views/nyauth/registrations/new.html.erb
+++ b/app/views/nyauth/registrations/new.html.erb
@@ -13,6 +13,6 @@
     <%= f.password_field :password_confirmation, placeholder: 'password confirmation' %>
   </div>
   <div>
-    <%= f.submit 'Sign up' %>
+    <%= f.submit t('nav.nyauth.registrations.new') %>
   </div>
 <% end %>
