--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -8,19 +8,20 @@
 </head>
 <body>
 
-<%= yield %>
 <% if flash[:notice] %>
   <%= flash[:notice] %>
 <% end %>
 <% if flash[:alert] %>
   <%= flash[:alert] %>
 <% end %>
-<%= link_to "URL helper on application", secret_page_path %>
+<%= link_to "Secret page(URL helper on application)", secret_page_path %>
 <% if signed_in?(as: :user) %>
-  <%= link_to 'Sign out', session_path_for(:user), class: 'pure-menu-link', method: :delete %>
+  <%= link_to t('nav.nyauth.sessions.destroy'), session_path_for(:user), class: 'pure-menu-link', method: :delete %>
 <% end %>
 <% if signed_in?(as: :admin) %>
-  <%= link_to 'Sign out', session_path_for(:admin), class: 'pure-menu-link', method: :delete %>
+  <%= link_to t('nav.nyauth.sessions.destroy'), session_path_for(:admin), class: 'pure-menu-link', method: :delete %>
 <% end %>
+
+<%= yield %>
 </body>
 </html>
