--- a/spec/dummy/app/views/secret_pages/show.html.erb
+++ b/spec/dummy/app/views/secret_pages/show.html.erb
@@ -1,1 +1,16 @@
+<p>
 It's a secret page!
+</p>
+
+<ul>
+  <li>
+    <%= link_to new_confirmation_request_path_for(nyauth_client_name) do %>
+      <%= t('nav.nyauth.confirmation_requests.new') %>
+    <% end %>
+  </li>
+  <li>
+    <%= link_to edit_password_path_for(nyauth_client_name) do %>
+      <%= t('nav.nyauth.passwords.edit') %>
+    <% end %>
+  </li>
+</ul>
